Added new depedencies to pom.xml for maven site